objects/Architecture_Task__c.object
<CustomObject>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <referenceTo>Architecture__c</referenceTo>
        <relationshipLabel>Architecture Tasks</relationshipLabel>
        <relationshipName>Architecture_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effort_d__c</fullName>
        <label>Effort (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efforts_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Efforts Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ressource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ressource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ressource__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ressource__c</referenceTo>
        <relationshipLabel>Architecture Tasks</relationshipLabel>
        <relationshipName>Architecture_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>text(Ressource__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Sheet</label>
        <referenceTo>Time_Sheet__c</referenceTo>
        <relationshipLabel>Architecture Tasks</relationshipLabel>
        <relationshipName>Architecture_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Architecture Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Architecture Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Architecture_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Effort_d__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Waiting on Someone else,Create Release Notes</value>
        </filters>
        <label>All Open Architecture Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Architecture Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Architecture Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_to_Reopen_Tasks</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
text(priorvalue(Status__c))=&apos;Completed&apos; &amp;&amp; text(Status__c)!=&apos;Create Release Notes&apos;</errorConditionFormula>
        <errorMessage>You are not allowed to reopen tasks</errorMessage>
    </validationRules>
</CustomObject>